# serverheaven

./: .firebaserc  .gitignore  README.md  firebase.json  firestore.indexes.json  package-lock.json  package.json  storage.rules  vite.config.js
functions/: .gitignore  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
functions/api/: app.py
functions/config/: .env.example
functions/core/: firebase.py  settings.py
functions/lib/: beta.js  beta.js.map  index.js  index.js.map  middleware.js  middleware.js.map  notifications.js  notifications.js.map  posts.js  posts.js.map  reviews.js  reviews.js.map  seed.js  seed.js.map  servers.js  servers.js.map  triggers.js  triggers.js.map  users.js  users.js.map
functions/src/: beta.ts  index.ts  middleware.ts  notifications.ts  posts.ts  reviews.ts  seed.ts  servers.ts  users.ts
purpleStone/: Design Tokens  Design Tokens.md  Estrutura do Backend.md  README.md  Sistema de Acesso Beta.md  Sistema de Autenticação e Perfis.md  Sistema de Avaliações.md  Sistema de Posts e Feed.md  Sistema de Servidores.md
purpleStone/_legacy/: Arquitetura Técnica.md  Fluxos Principais de Usuário e API.md  Modelagem de Dados.md  Visão Geral do Produto.md
src/: firebase-compat.js  firebase-config.js  main.js
